syntax = "proto3";

package JoystickControl;

option go_package = "./;proto";

// Empty message for requests with no parameters
message Empty {}

// Telemetry data types
message LinkStatsData {
  int32 rssi1 = 1;
  int32 rssi2 = 2;
  uint32 link_quality = 3;
  int32 snr = 4;
  uint32 rf_mode = 5;
  uint32 tx_power = 6;
}

message AttitudeData {
  float pitch = 1;
  float roll = 2;
  float yaw = 3;
}

message BatteryData {
  float voltage = 1;
  float current = 2;
  uint32 capacity = 3;
  uint32 remaining = 4;
}

message GPSData {
  float latitude = 1;
  float longitude = 2;
  float ground_speed = 3;
  float heading = 4;
  int32 altitude = 5;
  uint32 satellites = 6;
}

message FlightModeData {
  string mode = 1;
}

message SyncData {
  uint32 rate = 1;
  int32 offset = 2;
}

message LinkTXData {
  int32 rssi = 1;
  uint32 link_quality = 2;
  int32 snr = 3;
  uint32 tx_power = 4;
}

message LinkRXData {
  int32 rssi = 1;
  uint32 link_quality = 2;
  int32 snr = 3;
  uint32 active_antenna = 4;
}

message BarometerData {
  float altitude = 1;
}

message VariometerData {
  float vertical_speed = 1;
}

message BarometerVariometerData {
  float altitude = 1;
  float vertical_speed = 2;
}

message CRSFDeviceInfoData {
  uint32 device_id = 1;
  string name = 2;
}

message CRSFDeviceFieldEntryData {
  uint32 device_id = 1;
  uint32 field_id = 2;
}

message CRSFDeviceFieldData {
  uint32 device_id = 1;
  uint32 field_id = 2;
  bytes data = 3;
}

message CRSFDeviceLinkStatusData {
  bool critical_flags = 1;
}

// Main telemetry message with oneof for different data types
message Telemetry {
  oneof data {
    LinkStatsData link_stats = 1;
    AttitudeData attitude = 2;
    BatteryData battery = 3;
    GPSData gps = 4;
    FlightModeData flight_mode = 5;
    SyncData sync = 6;
    LinkTXData link_tx = 7;
    LinkRXData link_rx = 8;
    BarometerData barometer = 9;
    VariometerData variometer = 10;
    BarometerVariometerData barometer_variometer = 11;
    CRSFDeviceInfoData device_info = 12;
    CRSFDeviceFieldEntryData device_field_entry = 13;
    CRSFDeviceFieldData device_field = 14;
    CRSFDeviceLinkStatusData device_link_status = 15;
  }
}

// Transmitter messages
message Transmitter {
  string port = 1;
}

message GetTransmitterRes {
  repeated Transmitter transmitters = 1;
}

// Link control
message StartLinkReq {
  string port = 1;
  int32 baud_rate = 2;
}

// Gamepad messages
message Gamepad {
  string id = 1;
  string name = 2;
}

message GetGamepadsRes {
  repeated Gamepad gamepads = 1;
}

message GetGamepadStreamReq {
  string id = 1;
}

message GamepadInputsStates {
  repeated int32 axes = 1;
  repeated bool buttons = 2;
}

// Link state
message LinkState {
  uint64 sent_count = 1;
  uint64 recv_count = 2;
  uint64 error_count = 3;
}

// Transmitter stream
message GetTransmitterStreamReq {
  string port = 1;
}

message TransmitterChannels {
  repeated int32 channels = 1;
}

// Config messages
message GetConfigRes {
  string config = 1;
}

message SetConfigReq {
  string config = 1;
}

message ValidateConfigRes {
  repeated string errors = 1;
}

// App info
message GetAppInfoRes {
  string version = 1;
  string build_time = 2;
}

// CRSF device messages
message GetCRSFDevicesRes {
  repeated CRSFDeviceInfoData devices = 1;
}

message GetCRSFDeviceFieldReq {
  uint32 device_id = 1;
  uint32 field_id = 2;
}

message GetCRSFDeviceFieldRes {
  CRSFDeviceFieldData field = 1;
}

message GetCRSFDeviceFieldsReq {
  uint32 device_id = 1;
}

message GetCRSFDeviceFieldsRes {
  repeated CRSFDeviceFieldData fields = 1;
}

message SetCRSFDeviceFieldReq {
  uint32 device_id = 1;
  uint32 field_id = 2;
  bytes data = 3;
}

message SetCRSFDeviceFieldRes {
  bool success = 1;
}

message GetCRSFDeviceLinkStatusRes {
  CRSFDeviceLinkStatusData status = 1;
}

// Eval states for config debugging
message EvalStates {
  map<string, int32> states = 1;
}

// The main service
service JoystickControl {
  // App info
  rpc getAppInfo(Empty) returns (GetAppInfoRes);
  
  // Transmitter management
  rpc getTransmitters(Empty) returns (GetTransmitterRes);
  rpc getTransmitterStream(GetTransmitterStreamReq) returns (stream TransmitterChannels);
  
  // Link control
  rpc startLink(StartLinkReq) returns (Empty);
  rpc stopLink(Empty) returns (Empty);
  rpc getLinkStream(Empty) returns (stream LinkState);
  
  // Telemetry
  rpc getTelemetryStream(Empty) returns (stream Telemetry);
  
  // Gamepad
  rpc getGamepads(Empty) returns (GetGamepadsRes);
  rpc getGamepadStream(GetGamepadStreamReq) returns (stream GamepadInputsStates);
  
  // Config
  rpc getConfig(Empty) returns (GetConfigRes);
  rpc setConfig(SetConfigReq) returns (Empty);
  rpc validateConfig(Empty) returns (ValidateConfigRes);
  rpc getEvalStream(Empty) returns (stream EvalStates);
  
  // HTTP server control
  rpc startHTTP(Empty) returns (Empty);
  rpc stopHTTP(Empty) returns (Empty);
  
  // CRSF device management
  rpc getCRSFDevices(Empty) returns (GetCRSFDevicesRes);
  rpc getCRSFDeviceField(GetCRSFDeviceFieldReq) returns (GetCRSFDeviceFieldRes);
  rpc getCRSFDeviceFields(GetCRSFDeviceFieldsReq) returns (GetCRSFDeviceFieldsRes);
  rpc setCRSFDeviceField(SetCRSFDeviceFieldReq) returns (SetCRSFDeviceFieldRes);
  rpc getCRSFDeviceLinkStatus(Empty) returns (GetCRSFDeviceLinkStatusRes);
  rpc clearCRSFDeviceLinkCriticalFlags(Empty) returns (Empty);
}
